src/objects/Status_Report__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issues_Risks__c</fullName>
        <label>Issues / Risks</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Key_Items_Completed_Last_Week__c</fullName>
        <label>Key Items Completed Last Week</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Key_Items_Completed_This_Week__c</fullName>
        <label>Key Items Completed This Week</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Key_Items_Scheduled_for_Next_Week__c</fullName>
        <label>Key Items Scheduled for Next Week</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Key_Items_Scheduled_for_This_Week__c</fullName>
        <label>Key Items Scheduled for This Week</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Name_Text__c</fullName>
        <formula>Project__r.Primary_Client_Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Name Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Health_Status__c</fullName>
        <formula>IMAGE( LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) +
CASE( 
Project_Health__c, 
&quot;Yellow&quot;, &quot;resource/ProjectHealthStatusImages/yellow.png&quot;, 
&quot;Red&quot;, &quot;resource/ProjectHealthStatusImages/red.png&quot;, 
&quot;resource/ProjectHealthStatusImages/green.png&quot; 
), 
&quot;Project Health Status&quot;, 
15, 
15 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Health Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Health__c</fullName>
        <label>Project Health</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Lead__c</fullName>
        <formula>Project__r.Project_Lead__r.FirstName + &apos; &apos; +  Project__r.Project_Lead__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Lead</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name_Text__c</fullName>
        <formula>Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Status Reports</relationshipLabel>
        <relationshipName>Status_Reports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Questions_Concerns__c</fullName>
        <label>Questions / Concerns</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Sent_to_Client_On__c</fullName>
        <label>Sent to Client On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Report_Name__c</fullName>
        <label>Status Report Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upcoming_Holidays_PTO__c</fullName>
        <label>Upcoming Holidays / PTO</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Status Report</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Sent_to_Client_On__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>Status Report Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Status Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Start_Date_End_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>End_Date__c  &lt;  Start_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>The End Date cannot be before the Start Date</errorMessage>
    </validationRules>
</CustomObject>